<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        style="@style/textview_shadow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dip"
        android:gravity="center_horizontal"
        android:text="@string/wifi_title"
        android:textColor="#EEEE00"
        android:textSize="35sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dip"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_upload_msg_call_log_wifi"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dip"
            android:layout_marginLeft="25dip"
            android:layout_marginRight="25dip"
            android:background="@drawable/btn_wifi_bg"
            android:text="@string/wifi_msg_call" />

        <Button
            android:id="@+id/btn_upload_call_audio_wifi"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dip"
            android:layout_marginLeft="25dip"
            android:layout_marginRight="25dip"
            android:background="@drawable/btn_wifi_bg"
            android:text="@string/wifi_call_audio" />

        <Button
            android:id="@+id/btn_upload_other_audio_wifi"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dip"
            android:layout_marginLeft="25dip"
            android:layout_marginRight="25dip"
            android:background="@drawable/btn_wifi_bg"
            android:text="@string/wifi_call_other_audio" />

        <Button
            android:id="@+id/btn_upload_all_wifi"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dip"
            android:layout_marginLeft="25dip"
            android:layout_marginRight="25dip"
            android:background="@drawable/btn_wifi_bg"
            android:text="@string/wifi_all" />

        <Button
            android:id="@+id/btn_upload_contacts_wifi"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dip"
            android:layout_marginLeft="25dip"
            android:layout_marginRight="25dip"
            android:background="@drawable/btn_wifi_bg"
            android:text="@string/wifi_contacts" />

        <Button
            android:id="@+id/btn_upload_wifi_open"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dip"
            android:layout_marginLeft="25dip"
            android:layout_marginRight="25dip"
            android:background="@drawable/btn_wifi_bg"
            android:text="@string/wifi_turnup" />
    </LinearLayout>

</RelativeLayout>