<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_pop_normal_main"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/text_pop_normal_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="50dip"
        android:text="@string/send_command_confirm"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_pop_normal_code_show"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_pop_normal_title"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="30dip"
        android:textColor="#00EEEE"
        android:textSize="14sp" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dip"
        android:stretchColumns="0,1" >

        <TableRow>

            <Button
                android:id="@+id/btn_pop_normal_ok"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="25dip"
                android:layout_marginRight="25dip"
                android:background="@drawable/btn_send_bg"
                android:text="@string/confirm"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btn_pop_normal_copy"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="25dip"
                android:layout_marginRight="25dip"
                android:background="@drawable/btn_send_bg"
                android:text="@string/copy_clipboard"
                android:textColor="#FFFFFF" />
        </TableRow>
    </TableLayout>

</RelativeLayout>