<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_pop_input_main"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/text_pop_input_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="50dip"
        android:text="@string/input_audio_time"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edit_pop_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_pop_input_title"
        android:layout_marginBottom="20dip"
        android:layout_marginLeft="25dip"
        android:layout_marginRight="25dip"
        android:layout_marginTop="20dip"
        android:background="@drawable/bg_edit"
        android:hint="@string/input_hint_int"
        android:inputType="phone"
        android:paddingBottom="10dip"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btn_pop_input_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dip"
        android:layout_marginLeft="25dip"
        android:layout_marginRight="25dip"
        android:background="@drawable/btn_send_bg"
        android:textColor="#FFFFFF"
        android:text="@string/next" />

    <!--
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dip"
        android:stretchColumns="0,1" >

        <TableRow>


            <Button
                android:id="@+id/btn_pop_input_cancel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="25dip"
                android:layout_marginRight="25dip"
                android:text="取消" />
        </TableRow>
    </TableLayout> -->

</RelativeLayout>